--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <!-- email, telephone -->
         <ul class="contacts-in-header">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
