--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
         <!-- email, telephone -->
         <ul class="contacts-in-header">
-          <li>
+          <li class="email-li">
             <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
@@ -64,25 +64,25 @@
         <div class="container">
           <h2 class="visually-hidden">Особоливості</h2>
           <ul class="features-list">
-            <li>
+            <li class="features-list-item">
               <h3 class="feature-headings">Увага до деталей</h3>
               <p class="feature-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="feature-headings">Пунктуальність</h3>
               <p class="feature-description">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="feature-headings">Планування</h3>
               <p class="feature-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="feature-headings">Сучасні технології</h3>
               <p class="feature-description">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
