--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- email, telephone -->
         <ul class="contacts-in-header">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com </a>
           </li>
           <li>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
@@ -64,7 +64,12 @@
         <div class="container">
           <h2 class="visually-hidden">Особоливості</h2>
           <ul class="features-list">
-            <li>
+            <li class="features-list-item">
+              <div class="features-icon-div">
+                <svg>
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-headings">Увага до деталей</h3>
               <p class="feature-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
