--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <ul class="features-list">
             <li class="features-list-item">
               <div class="features-icon-div">
-                <svg>
+                <svg class="feature-icon" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -75,19 +75,34 @@
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
+              <div class="features-icon-div">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-headings">Пунктуальність</h3>
               <p class="feature-description">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li  class="features-list-item">
+              <div class="features-icon-div">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-headings">Планування</h3>
               <p class="feature-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li  class="features-list-item">
+              <div class="features-icon-div">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-headings">Сучасні технології</h3>
               <p class="feature-description">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -160,6 +175,36 @@
               <div class="team-member">
                 <h3 class="team-member-name">Ольга Репіна</h3>
                 <p class="team-member-position" lang="en">Frontend Developer</p>
+                <ul class="team-member-social-links">
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                 <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!-- marketing Микола Тарасов -->
