--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,22 @@
         <!-- email, telephone -->
         <ul class="contacts-in-header">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="email-contact" href="mailto:info@devstudio.com">
+              <svg class="icon-contact" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>
+              <p>info@devstudio.com </p>
+              </a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="email-contact" href="tel:+380961111111">
+             <svg class="icon-contact" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>              
+              <p>+38 096 111 11 11</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -202,26 +214,61 @@
     <!-- Address, contacts -->
     <footer class="footer">
       <div class="container">
-        <!-- Logo -->
-        <a href="/" lang="en" class="logo"
-          >Web<span class="colored-part-of-logo-in-footer">Studio</span></a
-        >
-        <address>
-          <ul class="contacts-in-footer">
-            <li>
-              <!-- Postal address not interactive contact -->
-              <p class="postal-address">м. Київ, пр-т Лесі Українки, 26</p>
-            </li>
-            <li>
-              <!-- Email interactive contact -->
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <!-- Phone interactive contact -->
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer-block">
+          <!-- Logo -->
+          <a href="/" lang="en" class="logo"
+            >Web<span class="colored-part-of-logo-in-footer">Studio</span></a
+          >
+          <address>
+            <ul class="contacts-in-footer">
+              <li>
+                <!-- Postal address not interactive contact -->
+                <p class="postal-address">м. Київ, пр-т Лесі Українки, 26</p>
+              </li>
+              <li>
+                <!-- Email interactive contact -->
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li>
+                <!-- Phone interactive contact -->
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-block studio-social-links-block">
+          <p class="social-links-heading-in-footer">приєднуйтесь</p>
+          <ul class="studio-social-links">
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+        </div>
       </div>
     </footer>
   </body>
