icons with right hovers

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- email, telephone -->
         <ul class="contacts-in-header">
           <li>
-            <a class="email-contact" href="mailto:info@devstudio.com">
+            <a class="contact-link" href="mailto:info@devstudio.com">
               <svg class="icon-contact" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
@@ -50,7 +50,7 @@
             </a>
           </li>
           <li>
-            <a class="phone-contact" href="tel:+380961111111">
+            <a class="contact-link" href="tel:+380961111111">
               <svg class="icon-contact" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
@@ -412,8 +412,8 @@
             </ul>
           </address>
         </div>
-        <div class="footer-block second-block">
-          <p class="social-links-heading-in-footer">приєднуйтесь</p>
+        <div class="footer-block">
+          <h2 class="social-links-heading-in-footer">приєднуйтесь</h2>
           <ul class="studio-social-links">
             <li>
               <a href="#" class="social-link">
