--- a/portfolio.html
+++ b/portfolio.html
@@ -40,23 +40,21 @@
           </ul>
         </nav>
         <!-- email, telephone -->
-        <ul class="contacts-in-header">
+         <ul class="contacts-in-header">
           <li>
-            <a class="email-contact" href="mailto:info@devstudio.com">
+            <a class="contact-link" href="mailto:info@devstudio.com">
               <svg class="icon-contact" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"
-                ></use>
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
-              <p>info@devstudio.com </p>
-              </a>
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a class="email-contact" href="tel:+380961111111">
-             <svg class="icon-contact" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"
-                ></use>
-              </svg>              
-              <p>+38 096 111 11 11</p>
+            <a class="contact-link" href="tel:+380961111111">
+              <svg class="icon-contact" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
             </a>
           </li>
         </ul>
